--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,14 @@ cmake_minimum_required(VERSION 3.16)
 project(pong)
 
 set(CMAKE__CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(SDL3 REQUIRED)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+find_package(SDL3 REQUIRED)
 
 add_executable(pong
   src/game.cpp
@@ -17,3 +19,9 @@ add_executable(pong
 )
 
 target_link_libraries(pong SDL3::SDL3)
+
+if(WIN32)
+  message(STATUS "compiling for windows")
+elseif(UNIX AND NOT APPLE)
+  message(STATUS "compiling for linux")
+endif()
